--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Weather App</title>
+    <style>
+      body {
+        background-image: url("https://img.freepik.com/premium-vector/sky-background-vector-graphics-flat-style_292645-232.jpg?size=626&ext=jpg&ga=GA1.1.1761430566.1705754582&semt=ais_user");
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-position: center;
+        background-attachment: fixed;
+      }
+    </style>
   </head>
-  <body style="background-color: rgb(248, 248, 248)">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
