--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,22 @@
     -->
     <title>Weather App</title>
     <style>
-      body {
-        background-image: url("https://img.freepik.com/premium-vector/sky-background-vector-graphics-flat-style_292645-232.jpg?size=626&ext=jpg&ga=GA1.1.1761430566.1705754582&semt=ais_user");
-        background-repeat: no-repeat;
-        background-size: 100%;
-        background-position: center;
-        background-attachment: fixed;
+      @media (min-width: 1024px) and (max-width: 1440px) {
+        body {
+          background-image: url("https://img.freepik.com/premium-vector/sky-background-vector-graphics-flat-style_292645-232.jpg?size=626&ext=jpg&ga=GA1.1.1761430566.1705754582&semt=ais_user");
+          background-repeat: no-repeat;
+          background-size: 100%;
+          background-position: center;
+          background-attachment: fixed;
+        }
+      }
+      @media (min-width: 425px) and (max-width: 569px) {
+        body {
+          background-image: url("https://img.freepik.com/premium-vector/sky-background-vector-graphics-flat-style_292645-232.jpg?size=626&ext=jpg&ga=GA1.1.1761430566.1705754582&semt=ais_user");
+          background-repeat: no-repeat;
+          background-size: 100% 100%;
+          background-attachment: fixed;
+        }
       }
     </style>
   </head>
