--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     -->
     <title>Weather App</title>
     <style>
-      @media (min-width: 1024px) and (max-width: 1440px) {
+      /* @media only screen and (min-width: 1024px) and (max-width: 1440px) {
         body {
           background-image: url("https://img.freepik.com/premium-vector/sky-background-vector-graphics-flat-style_292645-232.jpg?size=626&ext=jpg&ga=GA1.1.1761430566.1705754582&semt=ais_user");
           background-repeat: no-repeat;
@@ -38,13 +38,22 @@
           background-attachment: fixed;
         }
       }
-      @media (min-width: 425px) and (max-width: 569px) {
+      @media (min-width: 375px) and (max-width: 569px) {
         body {
           background-image: url("https://img.freepik.com/premium-vector/sky-background-vector-graphics-flat-style_292645-232.jpg?size=626&ext=jpg&ga=GA1.1.1761430566.1705754582&semt=ais_user");
           background-repeat: no-repeat;
           background-size: 100% 100%;
           background-attachment: fixed;
         }
+      } */
+      body {
+        background-image: url("https://img.freepik.com/premium-vector/sky-background-vector-graphics-flat-style_292645-232.jpg?size=626&ext=jpg&ga=GA1.1.1761430566.1705754582&semt=ais_user");
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-attachment: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
     </style>
   </head>
