--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         background-attachment: fixed;
         display: flex;
         justify-content: center;
-        transform: scale(1.1);
+        transform: scaleY(1.1);
       }
     </style>
   </head>
